--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,7 @@
   <title>Welcome to OpenShift</title>
 </head>
 <body>
-<h1>Hello, OpenShift.</h1>
+<h1>Hello, HUE HI HELOO OpenShift.</h1>
+<h1>Hello, HUE Shubham OpenShift.</h1>
 </body>
 </html>
